[package]
name = "tower-http-cors-config"
authors = ["Tom Harmon"]
description = "Deserializable config structs for tower_http::cors"
version = "0.1.0"
edition = "2021"
keywords = ["tower", "tower_http", "cors"]
license = "MIT"
resolver = "2"

[dependencies]
http = "1.1.0"
humantime-serde = { version = "1.1.1", optional = true }
regex = "1.10.6"
serde = { version = "1.0.209", optional = true }
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_yaml = "0.9.34"


[features]
default = []
serde = ["dep:humantime-serde", "dep:serde"]
